	* BUGFIX - Trying to load a broken LSS16 file (truncated to header or less) no longer causes crash
	* BUGFIX - PAM files with type BLACKANDWHITE are no longer loaded as grayscale (except if written as grayscale - ImageMagick does that)
	* BUGFIX - Loading PAM files with unknown TUPLTYPE doesn't cause crash
	* BUGFIX - SVG files starting with "<!DOCTYPE" no longer fail to load
	* BUGFIX - Animation cycling now doesn't skip over the last frame of a GIF loaded into layers
	* BUGFIX - Background layer is now made large enough to accommodate all frames when loading animation into layers
	* BUGFIX - Animation cycles are now properly updated when layers are reordered, duplicated or deleted
	* BUGFIX - Command line switches beyond the first one are now parsed properly
	* BUGFIX - Listing a directory containing files with broken date/time in builtin file selector on Windows doesn't cause crash
	* BUGFIX - Rare problem of undo system ignoring a changed pixel is now eliminated
	* BUGFIX - Polygonal selections no longer skip some contour pixels in certain situations
	* BUGFIX - Canvas window now doesn't lose mouse button press event if dock window has focus
	* BUGFIX - Problem with command line window wrongly reacting to mouse in some cases is now eliminated
	* BUGFIX - XPM icons now do not in some cases fail to display in compositing WMs
	* BUGFIX - Escape and Enter keys now work properly in all dialogs in GTK+1
	* BUGFIX - Dropping colours to palette in builtin colour selector now works properly in GTK+1

3.40	2011-12-30

	* Tagalog translation added by Anjelo delCarmen
	* Hungarian translation added by Ur Balazs
	* Czech translation updated by Roman Hornik
	* German translation updated by B. Clausius
	* Italian translation updated by Angelo Gemmi
	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Eriksson
	* Spanish translation updated by Adolfo Jayme
	* Brazilian Portuguese translation updated by Valter Nazianzeno