@@ -73,6 +73,9 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* BUGFIX - PAM files with type BLACKANDWHITE are no longer loaded as grayscale (except if written as grayscale - ImageMagick does that)
 	* BUGFIX - Loading PAM files with unknown TUPLTYPE doesn't cause crash
 	* BUGFIX - SVG files starting with "<!DOCTYPE" no longer fail to load
+	* BUGFIX - XPM loader now ignores newlines or lack thereof outside quoted strings, as it should
+	* BUGFIX - No more misplaced colours when saving some XPM files with 257-4096 colours
+	* BUGFIX - Two-colour images with darker colour 0 now do not come out inverted when saved as black and white
 	* BUGFIX - Animation cycling now doesn't skip over the last frame of a GIF loaded into layers
 	* BUGFIX - Background layer is now made large enough to accommodate all frames when loading animation into layers
 	* BUGFIX - Animation cycles are now properly updated when layers are reordered, duplicated or deleted
